user logs happypath with boardcreation auto works
